hphp/test/zend/good/ext/standard/tests/strings/bug24098.php.skipif
<?php
<<__EntryPoint>> function main() {
if (DIRECTORY_SEPARATOR == '\\') die("skip directory separator won't match expected output");
}
