hphp/test/zend/bad/ext/iconv/tests/translit-failure.php.skipif
<?php
include('skipif.inc');
( ICONV_IMPL != "libiconv" ) and die("skip ICONV_IMPL != \"libiconv\""); 
?>